# shap-relativities

./: .gitignore  CHANGELOG.md  CITATION.cff  README.md  pyproject.toml
.github/workflows/: docs.yml  publish.yml  tests.yml
benchmarks/: README.md  benchmark.py  benchmark_interactions.py  benchmark_nonlinear.py
docs/: index.html
docs/api/: index.html  search.js  shap_relativities.html
docs/api/shap_relativities/: datasets.html
notebooks/: benchmark.py  fremtpl2_shap_factors.py  quickstart.ipynb  run_benchmarks.py  run_coverage.py  run_inference_tests.py  run_nonlinear_benchmark.py  shap_inference_demo.py  shap_relativities_demo.py
src/shap_relativities/: __init__.py  _aggregation.py  _core.py  _inference.py  _normalisation.py  _plotting.py  _validation.py
src/shap_relativities/datasets/: __init__.py  motor.py
tests/: conftest.py  test_additional_coverage.py  test_extended_coverage.py  test_inference.py  test_inference_helpers.py  test_motor.py  test_new_coverage.py  test_shap_relativities.py  test_unit_modules.py
