[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "shap-relativities"
version = "0.1.0"
description = "Extract multiplicative rating relativities from GBM models using SHAP values. Built for insurance pricing."
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [
    { name = "Burning Cost", email = "pricing.frontier@gmail.com" },
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "numpy>=1.21",
    "pandas>=1.3",
    "scipy>=1.7",
]

[project.optional-dependencies]
# shap + tree model libraries — needed to compute SHAP values from a model
ml = [
    "shap>=0.41",
    "lightgbm>=3.3",
    "xgboost>=1.6",
]
# matplotlib for plot_relativities()
viz = [
    "matplotlib>=3.5",
]
# scikit-learn for load_motor() and extract_continuous_curve(smooth_method="isotonic")
datasets = [
    "scikit-learn>=1.0",
]
# Everything — use this for a complete install
all = [
    "shap>=0.41",
    "lightgbm>=3.3",
    "xgboost>=1.6",
    "matplotlib>=3.5",
    "scikit-learn>=1.0",
]
dev = [
    "pytest>=7.0",
    "lightgbm>=3.3",
    "shap>=0.41",
    "scikit-learn>=1.0",
]

[project.urls]
Homepage = "https://github.com/burningcost/shap-relativities"
Repository = "https://github.com/burningcost/shap-relativities"
"Issue Tracker" = "https://github.com/burningcost/shap-relativities/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/shap_relativities"]

[tool.pytest.ini_options]
testpaths = ["tests"]
