[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "shap-relativities"
version = "0.1.0"
description = "Extract multiplicative rating relativities from GBM models using SHAP values. Built for insurance pricing."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Burning Cost", email = "pricing.frontier@gmail.com" },
]
keywords = [
    "shap", "insurance", "pricing", "actuarial", "relativities",
    "gbm", "lightgbm", "xgboost",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Financial and Insurance Industry",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
    "Topic :: Office/Business :: Financial",
]
dependencies = [
    "pandas>=2.0",
    "numpy>=1.24",
    "scipy>=1.7",
]

[project.optional-dependencies]
# shap + tree model libraries — needed to compute SHAP values from a model
ml = [
    "shap>=0.42",
    "lightgbm>=4.0",
    "scikit-learn>=1.3",
]
# matplotlib for plot_relativities()
plot = [
    "matplotlib>=3.7",
]
# Everything — use this for a complete install
all = [
    "shap>=0.42",
    "lightgbm>=4.0",
    "scikit-learn>=1.3",
    "matplotlib>=3.7",
]
dev = [
    "pytest",
    "lightgbm>=4.0",
    "shap>=0.42",
    "scikit-learn>=1.3",
    "matplotlib>=3.7",
]

[project.urls]
Homepage = "https://github.com/burningcost/shap-relativities"
Repository = "https://github.com/burningcost/shap-relativities"
"Issue Tracker" = "https://github.com/burningcost/shap-relativities/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/shap_relativities"]

[tool.pytest.ini_options]
testpaths = ["tests"]
