[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "shap-relativities"
version = "0.2.6"
description = "Extract multiplicative rating relativities from GBM models using SHAP values. Built for insurance pricing."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Burning Cost", email = "pricing.frontier@gmail.com" },
]
keywords = [
    "shap", "insurance", "pricing", "actuarial", "relativities",
    "gbm", "catboost",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Financial and Insurance Industry",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
    "Topic :: Office/Business :: Financial",
]
dependencies = [
    "polars>=1.0",
    "numpy>=1.25",
    "scipy>=1.10",
    "pyarrow>=12.0",
]

[project.optional-dependencies]
# shap + tree model libraries — needed to compute SHAP values from a model.
# CatBoost is the default and recommended GBM for insurance pricing.
# pandas is a required bridge dependency: shap's TreeExplainer uses it
# internally for column name handling. It is not used in the library API.
ml = [
    "shap>=0.42",
    "catboost>=1.2",
    "scikit-learn>=1.3",
    "pandas>=2.0",
]
# matplotlib for plot_relativities()
plot = [
    "matplotlib>=3.7",
]
# tqdm for progress indicator during fit() — optional, degrades gracefully
progress = [
    "tqdm>=4.60",
]
# Everything — use this for a complete install
all = [
    "shap>=0.42",
    "catboost>=1.2",
    "scikit-learn>=1.3",
    "pandas>=2.0",
    "matplotlib>=3.7",
    "tqdm>=4.60",
]
dev = [
    "pyarrow>=12.0",
    "pytest",
    "catboost>=1.2",
    "shap>=0.42",
    "scikit-learn>=1.3",
    "pandas>=2.0",
    "matplotlib>=3.7",
    "tqdm>=4.60",
]

[project.urls]
Homepage = "https://burning-cost.github.io/shap-relativities/"
Repository = "https://github.com/burning-cost/shap-relativities"
Changelog = "https://github.com/burning-cost/shap-relativities/releases"
Documentation = "https://burning-cost.github.io/shap-relativities/"
Issues = "https://github.com/burning-cost/shap-relativities/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/shap_relativities"]

[tool.pytest.ini_options]
testpaths = ["tests"]
